--- a/static-html/index.html
+++ b/static-html/index.html
@@ -18,4 +18,6 @@ body {
 	<img src="logo.jpeg" />
 	<h1>Bienvenidos al Curso sobre Docker</h1>
 	<h2>Este es nuestro primer sitio web</h2>
+	<h2>Desplegado en producción con Docker</h2>
+
 </html>
